Fix caret width

Differential Revision: https://phabricator.kde.org/D13365
BUG:391518